# MELD

./: .gitignore  LICENSE  README.md
Logger/: pyproject.toml
Logger/meld_logger/: logger.py
MELD/: Dockerfile  build.sh  inference.py  main.py  requirements.txt  train.py
MELD/InternalDataLoader/: __init__.py  dataloader.py  db.py
MELD/Logger/: __init__.py  logger.py
MELD/ModelEnvironment/: __init__.py  docker_runtime.py  inference.py  job_context.py  model.py  train.py
MELD/ModelManager/: __init__.py  config_loader.py  contract.schema.json  manager.py
MELD/utils/: __init__.py  utils.py
artifact/: contract-training.yaml  contract.yaml  inference.py  long-query-training.sql  long-query.sql  requirements.txt  train.py
docker-pg/: README.md  build.sh
docker-pg/inference/: Dockerfile  main.py
docker-pg/orchestrator/: Dockerfile  main.py  requirements.txt  run.sh
examples/: inference_runtime_guide.md
examples/nn/: MODEL_CARD.md
examples/nn/inference/: inference.py  requirements.txt
examples/nn/resources/: contract.yaml  long-query.sql
examples/nn/train/: requirements.txt  train.py
examples/sklearn/: MODEL_CARD.md
examples/sklearn/inference/: inference.py  requirements.txt
examples/sklearn/resources/: contract.yaml
examples/tfdf/: MODEL_CARD.md
examples/tfdf/inference/: inference.py  requirements.txt
examples/tfdf/resources/: contract-training.yaml  contract.yaml  long-query.sql  (+1 more)
scripts/: build.sh  compose.yaml  compose.yml  install.sh  meld.sh  run.sh  utils.sh
utils/: pyproject.toml
utils/meld_utils/: __init__.py  utils.py
(+2 files in other folders)
